# Moco-custom-goal

./: .gitignore  README.md  Tutorial.pptx
exampleAccGoal/: CMakeLists.txt  WalkSim_All.cpp
exampleCustomGoal/: CMakeLists.txt  MocoActivationSquaredGoal.cpp  MocoActivationSquaredGoal.h  WalkSim_All.cpp  gaitTracking_solution_050intervals.sto  walk2D_young.osim
exampleMatlabInterface/: CMakeLists.txt  extendProblem.cpp  extendProblem.mexw64  extend_problem.m  makeMexFile.m  sliding_mass_solution.sto  test_ExtendProblem_simple.asv  test_ExtendProblem_simple.m
exampleSlidingMass/: CMakeLists.txt  exampleSlidingMass.cpp
exampleSlidingMassAdvanced/: CMakeLists.txt  exampleSlidingMassAdvanced.cpp
